# image-date-organizer

./: .travis.yml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
image_date_organizer/: __init__.py  cli.py  organize.py  utils.py
src/image_date_organizer/: cli.py  extractors.py  organize.py  utils.py
tests/: conftest.py  test_cli.py  test_extractors.py  test_organize.py  test_utils.py
tests/data/: random.txt
