[tool.poetry]
name = "image-date-organizer"
version = "0.2.0"
description = "Import and organize images by EXIF/XMP date"
authors = ["Sander Bollen <sander@sndrtj.eu>"]
license = "BSD-3-clause"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
Pillow = "^8.3.0"
pendulum = "^2.1.2"
python-magic = "^0.4.24"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
coverage = "^5.5"
mypy = "^0.910"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
