[tool.poetry]
name = "image-date-organizer"
version = "0.2.0-dev"
description = "Import and organize images by EXIF/XMP date"
authors = ["Sander Bollen <sander@sndrtj.eu>"]
license = "BSD-3-Clause"

packages = [
    {include = "image_date_organizer", from='src'}
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
Pillow = "^9.0.1"
pendulum = "^2.1.2"
python-magic = "^0.4.24"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
coverage = "^5.5"
mypy = "^0.910"
black = "^21.6b0"
types-setuptools = "^57.0.0"
isort = "^5.9.2"

[tool.poetry.scripts]
image-date-organizer = 'image_date_organizer.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
